# oxford_dictionary_bot

./: .gitignore  Cargo.toml  Dockerfile
src/: main.rs
